<resources>
    <string name="app_name">MR.Cook</string>
    <string name="logo_mr_cook">Logo MR. Cook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Cook Recipe</string>
    <string name="level">Level</string>
    <string name="food_thumb">Food Thumb</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam obcaecati officiis maiores magni eius, quas itaque fuga dicta, qui ipsa fugit tempore dolore corporis praesentium a? Facere, corporis dicta!</string>
    <string name="favorite">Favorite</string>
    <string name="back">Back</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps:</string>
    <string name="add_to_favorite">%s added to favorite</string>
    <string name="remove_from_favorite">%s removed from favorite</string>
    <string name="favorite_food">Favorite Food</string>
    <string name="favorite_recipe">Favorite Recipe</string>
    <string name="search_favorite_recipe">Search Favorite Recipe</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
</resources>