<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <ProgressBar
        style="@android:style/Widget.Holo.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="Button back" />

            <TextView
                android:id="@+id/HeaderProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profile"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                app:layout_constraintTop_toTopOf="@+id/buttonBack" />

        </LinearLayout>

        <ImageView
            android:id="@+id/profile_pict"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_baseline_account"
            android:layout_gravity="center"
            android:contentDescription="Profile Picture" />
        <LinearLayout
            android:id="@+id/profile_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullname"/>

            <TextView
                android:id="@+id/tvFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="fullname"
                android:outlineSpotShadowColor="@color/black"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444">
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="username"
                android:outlineSpotShadowColor="@color/black"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444">
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="email"
                android:outlineSpotShadowColor="@color/black"
                android:layout_marginBottom="5dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#444">
            </TableRow>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:layout_gravity="center"
                android:background="@color/grey"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>