<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground" >

    <androidx.cardview.widget.CardView
        android:id="@+id/foodThumbCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/foodThumb"
            android:layout_width="115dp"
            android:layout_height="132dp"
            android:contentDescription="@string/food_thumb"
            tools:src="@drawable/food"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foodThumbCard"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#FF2A2A2A"
            app:layout_constraintStart_toEndOf="@+id/foodThumbCard"
            tools:text="TITLE" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutDificulty"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/logoDificulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/level"
                    android:src="@drawable/ic_signal" />

                <TextView
                    android:id="@+id/dificulty"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:textColor="#FF382C"
                    tools:text="EASY" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPortion"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/logoPortion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/level"
                    android:src="@drawable/ic_plate" />

                <TextView
                    android:id="@+id/portion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:textColor="#FF382C"
                    tools:text="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTimes"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/logoTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/level"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/times"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:textColor="#FF382C"
                    tools:text="35mnt" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:textColor="#FF676769"
            app:layout_constraintStart_toEndOf="@+id/foodThumbCard"
            android:text="@string/lorem_ipsum" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>